added header section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
 </head>
 
 <body>
-    <header>
-        <!-- place navbar here -->
+
+<!-- header section -->
+    <header class="bg-primary text-white text-center py-2">
+<div class="container">
+    <h1 class="display-4"> MadLib Tutorial Site</h1>
+    <p class="lead"> check out this super duper fun madlib</p>
+</div>
     </header>
+
+
     <main></main>
     <footer>
         <!-- place footer here -->
