--- a/index.html
+++ b/index.html
@@ -24,11 +24,22 @@
 </div>
     </header>
 
+<!-- madlib section -->
+<main class="container my-4"> 
+<div class="text-center" id="madLibOutput">
+    <!-- madlib will go here -->
+</div>
+</main>
 
-    <main></main>
-    <footer>
-        <!-- place footer here -->
+<!--  footer section -->
+    <footer class="bg-primary text-white text-center py-2 fixed-bottom">
+        <div class="container">
+            <p>&copy; 2023 WDPP Level 2</p>
+            <p>From the mind of the really pretty Brianna DePinto</p>
+        </div>
     </footer>
+
+
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
