--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Madlib Tutorial</title>
+    <title>Christmas Madlib </title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -12,15 +12,18 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <!-- css -->
     <link rel="stylesheet" href="style.css">
+
+    <link href="https://fonts.cdnfonts.com/css/candy-cane" rel="stylesheet">
+                
 </head>
 
 <body>
 
 <!-- header section -->
-    <header class="bg-primary text-white text-center py-2">
+    <header class=" text-white text-center py-2">
 <div class="container">
-    <h1 class="display-4"> MadLib Tutorial Site</h1>
-    <p class="lead"> check out this super duper fun madlib</p>
+    <h1 class="display-4"> MadLib: <span class="christmaswords">Christmas Edition</span> </h1>
+    <p class="lead"> Check out this super duper fun CHRISTMAS MadLib!</p>
 </div>
     </header>
 
@@ -32,7 +35,7 @@
 </main>
 
 <!--  footer section -->
-    <footer class="bg-primary text-white text-center py-2 fixed-bottom">
+    <footer class=" text-white text-center py-2 fixed-bottom">
         <div class="container">
             <p>&copy; 2023 WDPP Level 2</p>
             <p>From the mind of the really pretty Brianna DePinto</p>
