--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <!-- css -->
     <link rel="stylesheet" href="style.css">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Luckiest+Guy&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.cdnfonts.com/css/candy-cane" rel="stylesheet">
-                
+
 </head>
 
 <body>
@@ -22,8 +25,18 @@
 <!-- header section -->
     <header class=" text-white text-center py-2">
 <div class="container">
-    <h1 class="display-4"> MadLib: <span class="christmaswords">Christmas Edition</span> </h1>
-    <p class="lead"> Check out this super duper fun CHRISTMAS MadLib!</p>
+    <h1 class="display-4"> <u>MadLib:</u> <span class="christmaswords">Christmas Edition</span> </h1>
+    <p class="lead"> Check out this super duper fun
+        <span class="tryred">C</span> 
+        <span class="trygreen">h</span> 
+        <span class="tryred">r</span> 
+        <span class="trygreen">i</span> 
+        <span class="tryred">s</span> 
+        <span class="trygreen">t</span> 
+        <span class="tryred">m</span> 
+        <span class="trygreen">a</span> 
+        <span class="tryred">s</span> 
+        MadLib!</p>
 </div>
     </header>
 
