--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Luckiest+Guy&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap" rel="stylesheet">
 
 </head>
 
@@ -26,7 +28,7 @@
     <header class=" text-white text-center py-2">
 <div class="container">
     <h1 class="display-4"> <u>MadLib:</u> <span class="christmaswords">Christmas Edition</span> </h1>
-    <p class="lead"> Check out this super duper fun
+    <p class="lead"> <span class="otherwords">Check out this super duper fun</span>
         <span class="tryred">C</span> 
         <span class="trygreen">h</span> 
         <span class="tryred">r</span> 
@@ -36,22 +38,26 @@
         <span class="tryred">m</span> 
         <span class="trygreen">a</span> 
         <span class="tryred">s</span> 
-        MadLib!</p>
+        <span class="otherwords">MadLib!</span></p>
 </div>
     </header>
 
 <!-- madlib section -->
+
 <main class="container my-4"> 
 <div class="text-center" id="madLibOutput">
     <!-- madlib will go here -->
 </div>
+<img class="imagee" src="img\christmas-tree-with-presents-vector-247477-removebg-preview.png" alt="">
 </main>
+
+
 
 <!--  footer section -->
     <footer class=" text-white text-center py-2 fixed-bottom">
         <div class="container">
             <p>&copy; 2023 WDPP Level 2</p>
-            <p>From the mind of the really pretty Brianna DePinto</p>
+            <p>From the mind of Brianna Lynn DePinto</p>
         </div>
     </footer>
 
