kilgore helped footer

--- a/index.html
+++ b/index.html
@@ -10,50 +10,62 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <!-- css -->
-    <link rel="stylesheet" href="style.css">
+   
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Luckiest+Guy&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Clicker+Script&family=Luckiest+Guy&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap" rel="stylesheet">
+     <!-- css -->
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-<!-- header section -->
+    <!-- header section -->
     <header class=" text-white text-center py-2">
-<div class="container">
-    <h1 class="display-4"> <u>MadLib:</u> <span class="christmaswords">Christmas Edition</span> </h1>
-    <p class="lead"> <span class="otherwords">Check out this super duper fun</span>
-        <span class="tryred">C</span> 
-        <span class="trygreen">h</span> 
-        <span class="tryred">r</span> 
-        <span class="trygreen">i</span> 
-        <span class="tryred">s</span> 
-        <span class="trygreen">t</span> 
-        <span class="tryred">m</span> 
-        <span class="trygreen">a</span> 
-        <span class="tryred">s</span> 
-        <span class="otherwords">MadLib!</span></p>
-</div>
+        <div class="container-fluid">
+            <h1 class="display-4"> <u>MadLib:</u> <span class="christmaswords">Christmas Edition</span> </h1>
+            <p class="lead"> <span class="otherwords">Check out this super duper fun</span>
+                <span class="tryred">C</span>
+                <span class="trygreen">h</span>
+                <span class="tryred">r</span>
+                <span class="trygreen">i</span>
+                <span class="tryred">s</span>
+                <span class="trygreen">t</span>
+                <span class="tryred">m</span>
+                <span class="trygreen">a</span>
+                <span class="tryred">s</span>
+                <span class="otherwords">MadLib!</span>
+            </p>
+        </div>
     </header>
 
-<!-- madlib section -->
+    <!-- madlib section -->
 
-<main class="container my-4"> 
-<div class="text-center" id="madLibOutput">
-    <!-- madlib will go here -->
-</div>
-<img class="imagee" src="img\christmas-tree-with-presents-vector-247477-removebg-preview.png" alt="">
-</main>
+    <div class="container-fluid m-4">
+        <div class="row text-center ">
+            <div class="col-12 col-lg-4 ">
+                <img class="imagee img-fluid" src="img\christmas-tree-with-presents-vector-247477-removebg-preview.png" alt="">
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="text-center" id="madLibOutput">
+                    <!-- madlib will go here -->
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                <img class="imagee rein img-fluid" src="img\22-221378_christmas-reindeer-png-image-cute-reindeer-christmas-clipart-removebg-preview.png" alt="">
+            </div>
+        </div>
+    </div>
 
 
 
-<!--  footer section -->
+    <!--  footer section -->
     <footer class=" text-white text-center py-2 fixed-bottom">
         <div class="container">
             <p>&copy; 2023 WDPP Level 2</p>
@@ -70,8 +82,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-        <!-- my javascript -->
-        <script src="script.js"></script>
+    <!-- my javascript -->
+    <script src="script.js"></script>
 </body>
 
 </html>
