--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <footer class=" text-white text-center py-2 fixed-bottom">
         <div class="container">
             <p>&copy; 2023 WDPP Level 2</p>
-            <p>From the mind of Brianna Lynn DePinto</p>
+            <p class="plswork"> From the mind of Brianna Lynn DePinto  </p>
         </div>
     </footer>
 
